# tailor

./: .gitignore  README.md  SETUP.md  build-check.ps1  build-errors.txt  build-log.txt  index.html  package-lock.json  package.json  pixi.toml  plugin-registry.json  pytest.ini  test_output.txt  theme-registry.json  vault.html  vite.config.js
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PLUGIN_GUIDE.md  PLUGIN_STRUCTURE.md  SETUP.md  UI_STYLE_GUIDE.md
example-vault/: .vault.json  .vault.toml
example-vault/plugins/: example_plugin.py  requirements.txt
frontend/: theme.css
sidecar/: README.md  constants.py  event_bus.py  event_emitter.py  main.py  models_registry.json  plugin_installer.py  requirements.txt  utils.py  vault_brain.py  websocket_server.py
sidecar/api/: plugin_base.py
sidecar/pipeline/: default.py  nodes.py  types.py
sidecar/services/: __init__.py  keyring_service.py  llm_service.py  tool_service.py
sidecar/tests/: README.md  test_decorators.py  test_event_priority.py  test_id_propagation.py  test_memory_branching.py  test_memory_plugin_integrated.py  test_pipeline.py  test_plugin_chat_branches.py  test_plugin_installer.py  test_plugin_smart_context.py  test_tool_service.py  test_vault_brain.py
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: dependency_checker.rs  event_bus.rs  ipc_router.rs  main.rs  sidecar_manager.rs  window_manager.rs
src/components/: navigation.js
src/pages/: dashboard.js  plugin-store.js  themes.js  vault-settings.js
src/services/: api.js
src/styles/: pages.css  splitters.css  styles.css  (+1 more)
(+46 files in other folders)
